# takeoffbench

./: README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
baselines/: run_baseline.py
cli/: download.py  main.py
data/ground_truth/: sample_001.json  sample_002.json  sample_003.json
data/splits/: val.json
docs/: index.html
docs/data/: leaderboard.json
evaluation/: metrics.py
schemas/: takeoff_schema.py
